2009-03-27 Riccardo Mottola <rmottola@users.sf.net>

	* Framework/PCProject.m: save windows placements to a separate file with the username as name

2009-03-24 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilder.m: Add some comments
	(parseCompilerLine:): Implemented gcc output for compiling and
	linking. Set currentBuildFile var on file compilation.
	(cleanupAfterMake),(build:),(parseBuildLine:),(buildDidTerminate):
	Update status field of builder panel and project window

2009-03-23 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilder.m: Change type of currentBuildPath var 
	to NSMutableString.
	(buildArguments): Always use messages=yes argument internally.
	"Verbose ouput" option (Build Options panel) just toogle if build
	shows as with make argument 'messages=yes' or not.
	(line:startsWithString:): Implemented line start detection.
	(parseMakeLine:): Inital implementation of parsing make tool
	output.
	(parseCompilerLine:): Add for future implementation.
	(logBuildString:newLine:): Remove error: argument as it's not used.
	Method outputs to build view.
	(parseBuildLine:): Add implementation of entry point of build output
	parsing.

2009-03-22 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilderOptions.m:
	(initWithProject:): Listen to PCProjectDictDidChangeNotification
	notification.
	(awakeFromNib): Move loading of project properties from here...
	(loadProjectProperties): ...to here. This is a notification action.
	* Framework/PCProjectInspector.m:
	(searchOrderPopupDidChange:): Clean selection in list. Clean text
	field.
	(searchOrderClick:): Show value of selected item in text field.
	(addSearchOrder:): Add check for entered value. More checking will be
	added
	in the future.
	* Documentation/TODO: Rearrange some items. Update state.
	* Framework/PCProjectBuilder.m: Some rearrangement of log methods.
	Category 'Logging' is for general logging methods, 'BuildLogging'